# bespoke-unravel

./: .gitmodules
docker/: Dockerfile  Makefile  run.sh
docker/unravel-0.2/: AUTHORS  COPYING  Makefile.am  README  configure.ac
docker/unravel-0.2/codec/: Makefile.am  fastlz_compress_main.cpp  fastlz_decompress_main.cpp  lz4.hpp  lz4_codec.cpp  lz4_compress_main.cpp  lz4_decompress_main.cpp  quicklz_compress_main.cpp  quicklz_decompress_main.cpp  snappy_compress_main.cpp  snappy_decompress_main.cpp
docker/unravel-0.2/src/: actual_strings_kenlm.cc  actual_strings_kenlm.hh  automaton_lm.cc  automaton_lm.hh  beam_search.cc  beam_search.hh  chunk_beam.cc  chunk_beam.hh  classes.cc  classes.hh  config_options.hh  constraint.hh  cooc.cc  cooc.hh  cooc_feature.cc  cooc_feature.hh  counts.cc  counts.hh  det_unravel_main.cc  em_unravel_helpers.hh  em_unravel_main.cc  embedding.cc  embedding.hh  embedding_feature.cc  embedding_feature.hh  extension_order.cc  extension_order.hh  fast_score.cc  feature.hh  fst_beamsearch.hh  fst_permute.hh  global.hh  hypothesis_struct.hh  kenlm_with_vocab.cc  kenlm_with_vocab.hh  lexicon.hh  lexicon_sparse.cc  lexicon_sparse.hh  lexicon_test.cc  lm.hh  (+30 more)
docker/unravel-0.2/src/cdec/mteval/: ns.cc  ns.h  ns_cer.cc  ns_comb.cc  ns_docscorer.cc  ns_ext.cc  ns_ssk.cc  ns_ter.cc
docker/unravel-0.2/template/: Makefile.am
docker/unravel-0.2/template/src/: template.cc  template.hh  template_main.cc  template_test.cc
